<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_buscar"
        android:title="@string/menu_buscar"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_preguntas"
        android:title="@string/menu_preguntas"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item android:id="@+id/action_acerca"
        android:title="@string/menu_acerca_de"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item android:id="@+id/action_settings"
        android:title="@string/menu_configuracion"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item android:id="@+id/action_importar"
        android:title="@string/menu_importar"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item android:id="@+id/action_exportar"
        android:title="@string/menu_exportar"
        android:orderInCategory="100"
        app:showAsAction="never"/>

</menu>